--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "face-recognition",
-  "homepage": "https://jbailey94.github.io/face-recognition/",
+  "homepage": "https://jbailey94.github.io/face-recognition",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
